--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,6 +20,15 @@
     <script src="assets/portfolio.js"></script>
     <script src="assets/nav.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47286500-7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-47286500-7');
+    </script>
 </head>
 <body>
     <section id="hero" class="page noNav centerBy3">
