--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="assets/modal.css">
     <link rel="stylesheet" href="assets/cta.css">
 
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-base64@2.5.2/base64.min.js"></script>
+    <script src="assets/email.js"></script>
+
     <script src="assets/modal.js"></script>
     <script src="assets/portfolio.js"></script>
     <script src="assets/nav.js"></script>
@@ -30,6 +34,27 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-47286500-7');
+    </script>
+
+    <script>
+        // grecaptcha.ready(function() {
+        //     grecaptcha.execute('6LdYi-IUAAAAAHDWcHY4BkEJkm5yNP1AM3Y9GEvM', {action: 'homepage'}).then(function(token) {
+        //         var data = JSON.stringify({response: token});
+
+        //         var xhr = new XMLHttpRequest();
+
+        //         // xhr.addEventListener("readystatechange", function () {
+        //         // if (this.readyState === 4) {
+        //         //     console.log(JSON.parse(this.responseText));
+        //         // }
+        //         // });
+
+        //         xhr.open("POST", "https://api.kentonvizdos.com/email");
+        //         xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+
+        //         xhr.send(data);
+        //     });
+        // });
     </script>
 </head>
 <body>
@@ -133,11 +158,17 @@
             <section class="container">
                 <h2>Let's chat.</h2>
                 <p>If you're looking for a web developer, let's chat and see if I'm right for you.</p>
-                <form id="cta">
+                <!-- <form id="cta" onsubmit="submitEmail()" action="javascript:grecaptcha.reset()"> -->
+                <form id="cta" onsubmit="submitEmail()" action="javascript:console.log('submit')">
+                    <p class="bad">You are missing some required inputs or the captcha.</p>
+                    <p class="good">Your email has sent successfully, I will be in touch soon. Thank you!</p>
+                    
                     <input type="text" id="name" placeholder="Your name..">
                     <input type="email" id="email" placeholder="Your email..">
                     <input type="text" id="company" placeholder="Your company..">
                     <input type="text" id="whatYouWant" placeholder="Your need..">
+                    <div class="g-recaptcha" data-sitekey="6LeoAuMUAAAAAOtIKbCFrbt6Y_qup0B48P47n7sd"></div>
+
                     <input type="submit" value="Contact">
                 </form>
             </section>
