--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Helo, I am a freelance and contract web developer and my name is Kenton Vizdos. I sleep in web development code, from NodeJS to Angular." />
     <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript, NodeJS, web development, web, developer, front end, full stack, code, programming. for hire">
 
-    <title>Kenton Vizdos - Full stack web developer</title>
+    <title>Kenton Vizdos - full stack web developer</title>
 
     <script src="https://kit.fontawesome.com/f40d5f26b8.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
