Junior -> rising senior

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,27 +35,6 @@
 
     gtag('config', 'UA-47286500-7');
     </script>
-
-    <script>
-        // grecaptcha.ready(function() {
-        //     grecaptcha.execute('6LdYi-IUAAAAAHDWcHY4BkEJkm5yNP1AM3Y9GEvM', {action: 'homepage'}).then(function(token) {
-        //         var data = JSON.stringify({response: token});
-
-        //         var xhr = new XMLHttpRequest();
-
-        //         // xhr.addEventListener("readystatechange", function () {
-        //         // if (this.readyState === 4) {
-        //         //     console.log(JSON.parse(this.responseText));
-        //         // }
-        //         // });
-
-        //         xhr.open("POST", "https://api.kentonvizdos.com/email");
-        //         xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-
-        //         xhr.send(data);
-        //     });
-        // });
-    </script>
 </head>
 <body>
     <section id="hero" class="page noNav centerBy3">
@@ -117,7 +96,7 @@
         <section class="page" id="about">
             <section class="container">
                 <h2>About Me</h2>
-                <p>My name is Kenton Vizdos and I am a junior at Deep Run High School's Center for Information Technology (CIT). Over the last few years, you may have seen me around town at ScrumRVA, Agile Richmond, Innovate Virginia, or one of the many other amazing Richmond events. Through a lot of independent learning, I've managed to learn many advanced web development frameworks and techniques such as Angular, React, NodeJS, Bootstrap, and more. Also, I've become a Certified Scrum Master (CSM) and Certified Scrum Product Owner (CSPO) which have helped me immensely while creating all of my projects.</p>
+                <p>My name is Kenton Vizdos and I am a rising senior at Deep Run High School's Center for Information Technology (CIT). Over the last few years, you may have seen me around town at ScrumRVA, Agile Richmond, Innovate Virginia, or one of the many other amazing Richmond events. Through a lot of independent learning, I've managed to learn many advanced web development frameworks and techniques such as Angular, React, NodeJS, Bootstrap, and more. Also, I've become a Certified Scrum Master (CSM) and Certified Scrum Product Owner (CSPO) which have helped me immensely while creating all of my projects.</p>
             
                 <ul id="certs">
                     <li><a href="https://www.scrumalliance.org/community/profile/kvizdos" target="_blank"><img src="assets/images/certs/csm.png"></a></li>
