Fix hero height

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -177,5 +177,9 @@
         <article id="modalCloser" class="modalSide" onclick="closeModal()"></article>
 
     </section>
+
+    <script>
+        document.querySelector('#hero').style.height = `calc(100vh - ${document.querySelector('#prauxy-branding-banner').offsetHeight}px)`
+    </script>
 </body>
 </html>
