--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Helo, I am a freelance and contract web developer and my name is Kenton Vizdos. I sleep in web development code, from NodeJS to Angular." />
     <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript, NodeJS, web development, web, developer, front end, full stack, code, programming. for hire">
 
+    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.PNG">
+
     <title>Kenton Vizdos - full stack web developer</title>
 
     <script src="https://kit.fontawesome.com/f40d5f26b8.js" crossorigin="anonymous"></script>
