--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Helo, I am a freelance and contract web developer and my name is Kenton Vizdos. I sleep in web development code, from NodeJS to Angular." />
+    <meta name="description" content="My name is Kenton Vizdos and I am a freelance web developer. I do web dev things." />
     <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript, NodeJS, web development, web, developer, front end, full stack, code, programming. for hire">
 
-    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.PNG">
+    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.PNG" />
+    <meta property="og:description" content="My name is Kenton Vizdos and I am a freelance web developer. I do web dev things." />
+
 
     <title>Kenton Vizdos - full stack web developer</title>
 
