--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="My name is Kenton Vizdos and I am a freelance web developer. I do web dev things." />
+    <meta name="description" content="I'm a high school student in Richmond, VA studying full stack web development." />
     <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript, NodeJS, web development, web, developer, front end, full stack, code, programming. for hire">
 
-    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.PNG" />
-    <meta property="og:description" content="My name is Kenton Vizdos and I am a freelance web developer. I do web dev things." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@kvizdos" />
+
+    <meta property="og:title" content="My web development portfolio." />
+    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.png" />
+    <meta property="og:description" content="I'm a high school student in Richmond, VA studying full stack web development." />
 
 
     <title>Kenton Vizdos - full stack web developer</title>
