--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,8 @@
 
     <meta property="og:title" content="My web development portfolio." />
     <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.png" />
+    <meta name="twitter:image" content="https://kentonvizdos.com/assets/ogimage.png" />
+ 
     <meta property="og:description" content="I'm a high school student in Richmond, VA studying full stack web development." />
 
 
