Sizing updates + fancy headshot animation on mobile

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -171,11 +171,13 @@
         </section>
 
         <section class="page full" id="work">
-            <section class="container" id="companies">
-                <article class="workContainer"></article>    
-            </section>
+            <section class="largeShrink">
+                <section class="container" id="companies">
+                    <article class="workContainer"></article>    
+                </section>
 
-            <section class="container" id="aboutCo"></section>
+                <section class="container" id="aboutCo"></section>
+            </section>
         </section>
 
         <section class="page" id="contact">
