--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,10 +10,10 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@kvizdos" />
-    <meta name="twitter:image" content="https://kentonvizdos.com/assets/ogimage.png" />
+    <meta name="twitter:image" content="https://kentonvizdos.com/assets/image/ogcard.png" />
 
     <meta property="og:title" content="My web development portfolio." />
-    <meta property="og:image" content="https://kentonvizdos.com/assets/ogimage.png" />
+    <meta property="og:image" content="https://kentonvizdos.com/assets/image/ogcard.png" />
 
     <meta property="og:description" content="I'm a high school student in Richmond, VA studying full stack web development." />
 
