--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -145,6 +145,18 @@
                 </ul>
             </section>
         </section>
+        <section class="page halfover" id="rvatech">
+            <section class="container">
+                <section id="reel">
+                    <article id="front">
+                            <img src="assets/rvatech-gala.png" alt="RVATech Gala">
+                            <h2>2020 NextGen Winner</h2>
+                            <p>This is awarded to a K-12 student who has demonstrated a meaningful impact on the technology ecosystem in Richmond.</p>
+                            <a href="https://www.facebook.com/rvatechcouncil/videos/251154276333988/?t=606" target="_blank">Watch the announcement <i class="fas fa-external-link-alt"></i></a>
+                    </article>
+                </section>
+            </section>
+        </section>
         <section class="page full" id="quote">
             <i class="fas fa-quote-left"></i>
             <blockquote>
