--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -145,7 +145,8 @@
                 </ul>
             </section>
         </section>
-        <section class="page halfover" id="rvatech">
+        <section class="page halfover" id="rvatechsection">
+            <hr id="rvatech" style="position: absolute;top: -100px;border: 0; width: 0; height: 0;" />
             <section class="container">
                 <section id="reel">
                     <article id="front">
