--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -116,7 +116,7 @@
         <article class="right">
             <ul id="navlist">
                 <li><a onclick="closeNav()" href="#about" class="active">About</a></li>
-                <li><a onclick="closeNav()" href="#portfolio">Portfolio</a></li>
+                <li><a onclick="closeNav()" href="#portfolios">Portfolio</a></li>
                 <li><a onclick="closeNav()" href="#work">Work Experience</a></li>
                 <li><a href="https://blog.kentonvizdos.com">Blog <i class="fas fa-external-link-alt" style="padding-left: 10px;"></i></a></li>
 
@@ -146,7 +146,7 @@
             </section>
         </section>
         <section class="page halfover" id="rvatechsection">
-            <hr id="rvatech" style="position: absolute;top: -100px;border: 0; width: 0; height: 0;" />
+            <hr id="rvatech" class="anchor" />
             <section class="container">
                 <section id="reel">
                     <article id="front">
@@ -168,6 +168,7 @@
         </section>
 
         <section class="page" id="portfolio">
+            <hr id="portfolios" class="anchor" />
             <section class="container">
                 <h2>What have I made?</h2>
                 <section class="buttons">
