--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -92,18 +92,18 @@
         <section></section>
         <section>
             <article class="text-center">
-                <img class="headshot" src="./assets/images/headshot.jpg" />
+                <img class="headshot" src="./assets/images/headshot.jpg" alt="My headshot" />
                 <h1>Kenton Vizdos</h1>
                 <p>I'm a high school student in Richmond, VA studying full stack web development</p>
                 <article class="socialBtns">
-                    <a href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
                 </article>
             </article>
 
             <ul id="whoIveWorkedFor" class="flatList">
-                <li><a href="#work"><img src="./assets/images/cos/singlestone.png"></a></li>
-                <li><a href="#work"><img src="./assets/images/cos/metactf.png"></a></li>
+                <li><a href="#work"><img src="./assets/images/cos/singlestone.png" alt="Singlestone"></a></li>
+                <li><a href="#work"><img src="./assets/images/cos/metactf.png" alt="MetaCTF"></a></li>
             </ul>
         </section>
 
@@ -118,7 +118,7 @@
                 <li><a onclick="closeNav()" href="#about" class="active">About</a></li>
                 <li><a onclick="closeNav()" href="#portfolios">Portfolio</a></li>
                 <li><a onclick="closeNav()" href="#work">Work Experience</a></li>
-                <li><a href="https://blog.kentonvizdos.com">Blog <i class="fas fa-external-link-alt" style="padding-left: 10px;"></i></a></li>
+                <li><a rel="noopener" href="https://blog.kentonvizdos.com">Blog <i class="fas fa-external-link-alt" style="padding-left: 10px;"></i></a></li>
 
                 <li id="nightmodeToggle" onclick="toggleDarkmode();" class="hideOnMobile"><i class="far fa-moon"></i></li>
                 
@@ -134,14 +134,14 @@
         <section class="page" id="about">
             <section class="container">
                 <figure>
-                    <img class="headshot" src="./assets/images/headshot.jpg" />
+                    <img class="headshot" src="./assets/images/headshot.jpg" alt="My Headshot" />
                 </figure>
                 <h2>About Me</h2>
                 <p>My name is Kenton Vizdos and I am a senior at Deep Run High School's Center for Information Technology (CIT). Over the last few years, you may have seen me around town at ScrumRVA, Agile Richmond, Innovate Virginia, or one of the many other amazing Richmond events. Through a lot of independent learning, I've managed to learn many advanced web development frameworks and techniques such as Angular, React, NodeJS, Bootstrap, and more. Also, I've become a Certified Scrum Master (CSM) and Certified Scrum Product Owner (CSPO) which have helped me immensely while creating all of my projects.</p>
             
                 <ul id="certs">
-                    <li><a href="https://www.scrumalliance.org/community/profile/kvizdos" target="_blank"><img src="assets/images/certs/csm.png"></a></li>
-                    <li><a href="https://www.scrumalliance.org/community/profile/kvizdos" target="_blank"><img src="assets/images/certs/cspo.png"></a></li>
+                    <li><a href="https://www.scrumalliance.org/community/profile/kvizdos" rel="noopener" target="_blank"><img src="assets/images/certs/csm.png" alt="CSM"></a></li>
+                    <li><a href="https://www.scrumalliance.org/community/profile/kvizdos" rel="noopener" target="_blank"><img src="assets/images/certs/cspo.png" alt="CSPO"></a></li>
                 </ul>
             </section>
         </section>
@@ -153,7 +153,7 @@
                             <img src="assets/rvatech-gala.png" alt="RVATech Gala">
                             <h2>2020 NextGen Winner</h2>
                             <p>This is awarded to a K-12 student who has demonstrated a meaningful impact on the technology ecosystem in Richmond.</p>
-                            <a href="https://www.facebook.com/rvatechcouncil/videos/251154276333988/?t=606" target="_blank">Watch the announcement <i class="fas fa-external-link-alt"></i></a>
+                            <a rel="noopener" href="https://www.facebook.com/rvatechcouncil/videos/251154276333988/?t=606" target="_blank">Watch the announcement <i class="fas fa-external-link-alt"></i></a>
                     </article>
                 </section>
             </section>
@@ -172,7 +172,7 @@
             <section class="container">
                 <h2>What have I made?</h2>
                 <section class="buttons">
-                    <a href="https://github.com/kvizdos/" target="_blank" class="btn github"><i class="fab fa-github-alt" aria-hidden="true"></i> GitHub</a>
+                    <a rel="noopener" href="https://github.com/kvizdos/" target="_blank" class="btn github"><i class="fab fa-github-alt" aria-hidden="true"></i> GitHub</a>
                 </section>
 
                 <ul class="categorySelector">
