--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -151,7 +151,7 @@
                 <section id="reel">
                     <article id="front">
                             <img src="assets/rvatech-gala.png" alt="RVATech Gala">
-                            <h2>2020 NextGen Winner</h2>
+                            <h2>2020 Next Gen Winner</h2>
                             <p>This is awarded to a K-12 student who has demonstrated a meaningful impact on the technology ecosystem in Richmond.</p>
                             <a rel="noopener" href="https://www.facebook.com/rvatechcouncil/videos/251154276333988/?t=606" target="_blank">Watch the announcement <i class="fas fa-external-link-alt"></i></a>
                     </article>
@@ -203,10 +203,10 @@
                     <p class="bad">You are missing some required inputs or the captcha.</p>
                     <p class="good">Your email has sent successfully, I will be in touch soon. Thank you!</p>
                     
-                    <input type="text" id="name" placeholder="Your name..">
-                    <input type="email" id="email" placeholder="Your email..">
-                    <input type="text" id="company" placeholder="Your company..">
-                    <input type="text" id="whatYouWant" placeholder="Your need..">
+                    <input type="text" id="name" placeholder="Your name.." aria-label="Your name: ">
+                    <input type="email" id="email" placeholder="Your email.." aria-label="Your email: ">
+                    <input type="text" id="company" placeholder="Your company.." aria-label="Your company (if applicable): ">
+                    <input type="text" id="whatYouWant" placeholder="Your need or comment.."  aria-label="Your need or comment: ">
                     <div class="g-recaptcha" data-sitekey="6LeoAuMUAAAAAOtIKbCFrbt6Y_qup0B48P47n7sd"></div>
 
                     <input type="submit" value="Contact">
