More accessibility + awesome RVA background image

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -96,18 +96,18 @@
                 <h1>Kenton Vizdos</h1>
                 <p>I'm a high school student in Richmond, VA studying full stack web development</p>
                 <article class="socialBtns">
-                    <a rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a aria-label="LinkedIn" rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a aria-label="Twitter" rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
                 </article>
             </article>
 
             <ul id="whoIveWorkedFor" class="flatList">
-                <li><a href="#work"><img src="./assets/images/cos/singlestone.png" alt="Singlestone"></a></li>
-                <li><a href="#work"><img src="./assets/images/cos/metactf.png" alt="MetaCTF"></a></li>
+                <li><a href="#work" aria-label="Look at my Singlestone experience"><img src="./assets/images/cos/singlestone.png" alt="Singlestone"></a></li>
+                <li><a href="#work" aria-label="Look at my MetaCTF experience"><img src="./assets/images/cos/metactf.png" alt="MetaCTF"></a></li>
             </ul>
         </section>
 
-        <a href="#page" id="goDown"><i class="fas fa-chevron-down" id="downArrow"></i></a>
+        <a href="#page" id="goDown" aria-label="Scroll down"><i class="fas fa-chevron-down" id="downArrow"></i></a>
     </section>
 
     
