Modified header- removed animation from award

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -91,23 +91,25 @@
     <section id="hero" class="page noNav centerBy3">
         <section></section>
         <section>
-            <article class="text-center">
+            <article id="row" class="forceRight">
                 <img class="headshot" src="./assets/images/headshot.jpg" alt="My headshot" />
-                <h1>Kenton Vizdos</h1>
-                <p>I'm a high school student in Richmond, VA studying full stack web development</p>
-                <article class="socialBtns">
-                    <a aria-label="LinkedIn" rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a aria-label="Twitter" rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
-                </article>
+                    <section>
+                    <h1>Kenton Vizdos</h1>
+                    <p>I'm a high school student in Richmond, VA studying full stack web development</p>
+                    <article class="socialBtns">
+                        <a aria-label="LinkedIn" rel="noopener" href="https://www.linkedin.com/in/kentonvizdos/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a aria-label="Twitter" rel="noopener" href="http://twitter.com/kvizdos" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </article>
+                </section>
             </article>
-
+<!-- 
             <ul id="whoIveWorkedFor" class="flatList">
                 <li><a href="#work" aria-label="Look at my Singlestone experience"><img src="./assets/images/cos/singlestone.png" alt="Singlestone"></a></li>
                 <li><a href="#work" aria-label="Look at my MetaCTF experience"><img src="./assets/images/cos/metactf.png" alt="MetaCTF"></a></li>
-            </ul>
+            </ul> -->
         </section>
 
-        <a href="#page" id="goDown" aria-label="Scroll down"><i class="fas fa-chevron-down" id="downArrow"></i></a>
+        <!-- <a href="#page" id="goDown" aria-label="Scroll down"><i class="fas fa-chevron-down" id="downArrow"></i></a> -->
     </section>
 
     
