--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="assets/cta.css">
     <link rel="stylesheet" href="assets/darkmode.css">
 
+    <link rel="shortcut icon" href="./assets/images/headshot.jpg" type="image/x-icon">
+
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/js-base64@2.5.2/base64.min.js"></script>
     <script src="assets/email.js"></script>
