--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -210,7 +210,8 @@
                     <input type="text" id="name" placeholder="Your name.." aria-label="Your name: ">
                     <input type="email" id="email" placeholder="Your email.." aria-label="Your email: ">
                     <input type="text" id="company" placeholder="Your company.." aria-label="Your company (if applicable): ">
-                    <input type="text" id="whatYouWant" placeholder="Your need or comment.."  aria-label="Your need or comment: ">
+                    <br>
+                    <textarea type="text" id="whatYouWant" placeholder="Your need or comment.."  aria-label="Your need or comment: "></textarea>
                     <div class="g-recaptcha" data-sitekey="6LeoAuMUAAAAAOtIKbCFrbt6Y_qup0B48P47n7sd"></div>
 
                     <input type="submit" value="Contact">
