--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -153,7 +153,7 @@
             <hr id="rvatech" class="anchor" />
             <section class="container">
                 <section id="reel">
-                    <article id="front">
+                    <article id="front" class="showOnScroll">
                             <img src="assets/rvatech-gala.png" alt="RVATech Gala">
                             <h2>2020 Next Gen Winner</h2>
                             <p>This is awarded to a K-12 student who has demonstrated a meaningful impact on the technology ecosystem in Richmond.</p>
